footer alignment fixed

--- a/index.css
+++ b/index.css
@@ -9,7 +9,8 @@ body {
 
 }
 footer {
-    text-align: center;
+    display: flex;
+    justify-content: center;
     position: fixed;
     bottom: 0;
     left: 0;
